*SVN*

* Fixed that clone would break when an aggregate had the same name as one of its attributes #1307 [bitsweat]

* Changed that destroying an object will only freeze the attributes hash, which keeps the object from having attributes changed (as that wouldn't make sense), but allows for the querying of associations after it has been destroyed.

* Changed the callbacks such that observers are notified before the in-object callbacks are triggered. Without this change, it wasn't possible to act on the whole object in something like a before_destroy observer without having the objects own callbacks (like deleting associations) called first.

* Added option for passing an array to the find_all version of the dynamic finders and have it evaluated as an IN fragment. Example:

    # SELECT * FROM topics WHERE title IN ('First', 'Second')
    Topic.find_all_by_title(["First", "Second"])

* Added compatibility with camelCase column names for dynamic finders #533 [Dee.Zsombor]

* Fixed extraneous comma in count() function that made it not work with joins #1156 [jarkko/Dee.Zsombor]

* Fixed incompatibility with Base#find with an array of ids that would fail when using eager loading #1186 [Alisdair McDiarmid]

* Fixed that validate_length_of lost :on option when :within was specified #1195 [jhosteny@mac.com]

* Added encoding and min_messages options for PostgreSQL #1205 [shugo]. Configuration example:

    development:
      adapter: postgresql
      database: rails_development
      host: localhost
      username: postgres
      password:
      encoding: UTF8
      min_messages: ERROR

* Fixed acts_as_list where deleting an item that was removed from the list would ruin the positioning of other list items #1197 [Jamis Buck]

* Added validates_exclusion_of as a negative of validates_inclusion_of

* Optimized counting of has_many associations by setting the association to empty if the count is 0 so repeated calls doesn't trigger database calls


*1.10.1* (20th April, 2005)
